--- a/LAB/DA-1/index.html
+++ b/LAB/DA-1/index.html
@@ -60,7 +60,7 @@
               <h2>About me</h2>
               <div class="row">
                 <div class="col-md-4">
-                  <p><img src="./assets/images/img-01.jpg" class="img-responsive" style="height: auto;" alt=""></p>
+                  <p><img src="assets/images/img-01.jpg" class="img-responsive" style="height: auto;" alt=""></p>
                 </div>
                 <div class="col-md-8">
 
